--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "im-container",
+  "name": "pic-cube",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "serve-static": "http-server ./statics -p 8080 --no-dotfiles",
+    "dev": "next dev & yarn serve-static",
     "build": "next build",
-    "start": "next start",
+    "start": "next start & yarn serve-static",
     "lint": "next lint"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
+    "http-server": "^14.1.1",
     "next": "12.2.3",
+    "postcss-import": "^14.1.0",
+    "postcss-preset-env": "^7.8.0",
+    "punycode": "^2.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
@@ -19,6 +27,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "sass": "^1.54.3",
     "typescript": "4.7.4"
   }
 }
