--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chokidar": "^3.5.3",
+    "fluent-ffmpeg": "^2.1.2",
     "http-server": "^14.1.1",
     "next": "12.2.3",
     "postcss-import": "^14.1.0",
@@ -19,7 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
-    "serverless-mysql": "^1.5.4"
+    "serverless-mysql": "^1.5.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
