--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chokidar": "^3.5.3",
+    "dayjs": "^1.11.5",
     "fluent-ffmpeg": "^2.1.2",
     "http-server": "^14.1.1",
     "next": "12.2.3",
