--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chokidar": "^3.5.3",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.5",
     "fluent-ffmpeg": "^2.1.2",
     "http-server": "^14.1.1",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-icons": "^4.4.0",
     "serverless-mysql": "^1.5.4",
     "uuid": "^8.3.2"
   },
