--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.7",
     "recoil": "^0.7.5",
     "serverless-mysql": "^1.5.4",
     "uuid": "^8.3.2"
@@ -32,6 +33,7 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "sass": "^1.54.3",
