--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/react-scroll": "^1.8.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "sass": "^1.54.3",
     "typescript": "4.7.4"
   }
