--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "pic-cube",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "serve-static": "http-server ./statics -p 8080 --no-dotfiles",
-    "dev": "next dev & yarn serve-static",
-    "build": "next build",
-    "start": "next start & yarn serve-static",
-    "lint": "next lint",
+    "lint": "eslint",
     "prepare": "husky install"
   },
   "husky": {
@@ -15,38 +14,12 @@
       "pre-commit": "lint-staged"
     }
   },
-  "dependencies": {
-    "@react-hook/resize-observer": "^1.2.6",
-    "chokidar": "^3.5.3",
-    "clsx": "^1.2.1",
-    "dayjs": "^1.11.5",
-    "fluent-ffmpeg": "^2.1.2",
-    "http-server": "^14.1.1",
-    "next": "12.2.3",
-    "postcss-import": "^14.1.0",
-    "postcss-preset-env": "^7.8.0",
-    "punycode": "^2.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.34.0",
-    "react-icons": "^4.4.0",
-    "react-scroll": "^1.8.7",
-    "recoil": "^0.7.5",
-    "serverless-mysql": "^1.5.4",
-    "uuid": "^8.3.2"
-  },
   "devDependencies": {
-    "@types/node": "18.6.3",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "@types/react-scroll": "^1.8.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "sass": "^1.54.3",
-    "typescript": "4.7.4"
+    "prettier": "^2.7.1"
   }
 }
