--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -37,3 +38,4 @@ yarn-error.log*
 # ignore dir
 /statics/*
 /imports
+generated/
