--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -8,12 +8,12 @@ COPY . .
 
 RUN apk add --no-cache ffmpeg
 RUN yarn install --frozen-lockfile
-RUN yarn workspace pic-cube-frontend install --frozen-lockfile
+RUN yarn workspace @pic-cube/frontend install --frozen-lockfile
 
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV NODE_ENV production
 
-RUN yarn workspace pic-cube-frontend build
+RUN yarn workspace @pic-cube/frontend build
 
 EXPOSE 3000
 ENV PORT 3000
