--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,11 +14,11 @@
     "chokidar": "^3.5.3",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.5",
-    "dotenv": "^16.0.3",
-    "dotenv-webpack": "^8.0.1",
+    "dotenv": "16.0.3",
+    "dotenv-webpack": "8.0.1",
     "fluent-ffmpeg": "^2.1.2",
-    "graphql-request": "^5.0.0",
-    "graphql-tag": "^2.12.6",
+    "graphql-request": "5.0.0",
+    "graphql-tag": "2.12.6",
     "http-server": "^14.1.1",
     "next": "12.2.3",
     "postcss-import": "^14.1.0",
