--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@graphql-tools/load-files": "6.6.1",
     "@pic-cube/api-schema": "0.1.0",
-    "@prisma/client": "^4.5.0",
-    "@types/cors": "^2.8.12",
+    "@prisma/client": "4.5.0",
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
     "@types/node": "18.11.3",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "express": "4.18.2",
     "express-graphql": "0.12.0",
     "graphql": "16.6.0",
@@ -23,6 +23,6 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
-    "prisma": "^4.5.0"
+    "prisma": "4.5.0"
   }
 }
