--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "lint": "eslint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "pm2 install typescript"
   },
   "husky": {
     "hooks": {
