--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "ts-node --transpile-only ./server.ts",
     "start:dev": "ts-node ./server.ts",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "start:scanners": "tsc -p ./scanners/tsconfig.json && pm2 start ./scanners/pm2.config.js",
+    "start:dev-scanners": "pm2 start ./scanners/pm2.config.js --watch --no-daemon & tsc -w -p ./scanners/tsconfig.json"
   },
   "dependencies": {
     "@graphql-tools/load-files": "6.6.1",
@@ -13,14 +15,19 @@
     "@prisma/client": "4.5.0",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/node": "18.11.3",
+    "@types/uuid": "^8.3.4",
+    "@types/workerpool": "^6.1.0",
     "cors": "2.8.5",
     "express": "4.18.2",
     "express-graphql": "0.12.0",
     "graphql": "16.6.0",
     "graphql-tools": "8.3.6",
+    "pm2": "^5.2.2",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "workerpool": "^6.3.0"
   },
   "devDependencies": {
     "prisma": "4.5.0"
