--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   ],
   "scripts": {
     "lint": "eslint",
-    "prepare": "husky install",
-    "postinstall": "pm2 install typescript"
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
