Change to build workers

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "run-s build:scanners start:all",
+    "start": "run-s build start:all",
     "stop": "pm2 kill",
     "start:all": "pm2 start ./pm2.config.js",
-    "start:all-dev": "run-s 'start:all --watch --no-daemon'",
+    "start:all-dev": "run-p build:dev 'start:all --watch --no-daemon'",
     "start:api": "ts-node --transpile-only ./server.ts",
     "start:api-dev": "ts-node ./server.ts",
     "start:scanners": "pm2 start ./pm2.config.js --only scanners",
-    "start:scanners-dev": "run-p 'start:scanners --watch --no-daemon' build:scanners-dev",
-    "build:scanners": "tsc -p ./scanners/tsconfig.json",
-    "build:scanners-dev": "run-s 'build:scanners -w'",
+    "start:scanners-dev": "run-p build:dev 'start:scanners --watch --no-daemon'",
+    "build": "tsc",
+    "build:dev": "run-s 'build -w'",
     "codegen": "graphql-codegen --config codegen.ts",
     "postinstall": "pm2 install typescript"
   },
