--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -6,11 +6,12 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
-  }
+    "isolatedModules": true,
+    "outDir": "./binaries/"
+  },
+  "include": ["./**/*.ts"]
 }
