Change npm scripts of start:api

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,8 +7,8 @@
     "stop": "pm2 kill",
     "start:all": "pm2 start ./pm2.config.js",
     "start:all-dev": "run-p build:dev 'start:all --watch --no-daemon'",
-    "start:api": "ts-node --transpile-only ./server.ts",
-    "start:api-dev": "ts-node ./server.ts",
+    "start:api": "pm2 start ./pm2.config.js --only api",
+    "start:api-dev": "run-p build:dev 'start:api --watch --no-daemon'",
     "start:scanners": "pm2 start ./pm2.config.js --only scanners",
     "start:scanners-dev": "run-p build:dev 'start:scanners --watch --no-daemon'",
     "build": "tsc",
