--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,14 +23,17 @@
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
     "@types/fluent-ffmpeg": "^2.1.20",
+    "@types/get-image-colors": "^4.0.1",
     "@types/node": "18.11.3",
     "@types/uuid": "^8.3.4",
     "@types/workerpool": "^6.1.0",
     "cors": "2.8.5",
     "express": "4.18.2",
     "express-graphql": "0.12.0",
+    "get-image-colors": "^4.0.1",
     "graphql": "16.6.0",
     "graphql-tools": "8.3.6",
+    "har-schema": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "pm2": "^5.2.2",
     "ts-node": "10.9.1",
