--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,8 @@
     "@types/fluent-ffmpeg": "^2.1.20",
     "@types/get-image-colors": "^4.0.1",
     "@types/node": "18.11.3",
+    "@types/parseurl": "^1.3.1",
+    "@types/send": "^0.17.1",
     "@types/uuid": "^8.3.4",
     "@types/workerpool": "^6.1.0",
     "cors": "2.8.5",
@@ -35,7 +37,9 @@
     "graphql-tools": "8.3.6",
     "har-schema": "^2.0.0",
     "npm-run-all": "^4.1.5",
+    "parseurl": "^1.3.3",
     "pm2": "^5.2.2",
+    "send": "^0.18.0",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
     "workerpool": "^6.3.0"
