--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & yarn serve-static",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start & yarn serve-static",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
