--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,18 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "run-s build start:all",
-    "stop": "pm2 kill",
-    "start:all": "pm2 start ./pm2.config.js",
-    "start:all-dev": "run-p build:dev 'start:all --watch --no-daemon'",
-    "start:api": "pm2 start ./pm2.config.js --only api",
-    "start:api-dev": "run-p build:dev 'start:api --watch --no-daemon'",
-    "start:scanners": "pm2 start ./pm2.config.js --only scanners",
-    "start:scanners-dev": "run-p build:dev 'start:scanners --watch --no-daemon'",
     "build": "tsc",
-    "build:dev": "run-s 'build -w'",
-    "codegen": "graphql-codegen --config codegen.ts",
-    "postinstall": "pm2 install typescript"
+    "watch": "tsc -w"
   },
   "dependencies": {
     "@graphql-tools/load-files": "6.6.1",
@@ -22,27 +12,27 @@
     "@prisma/client": "4.5.0",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
-    "@types/fluent-ffmpeg": "^2.1.20",
-    "@types/get-image-colors": "^4.0.1",
+    "@types/fluent-ffmpeg": "2.1.20",
+    "@types/get-image-colors": "4.0.1",
     "@types/node": "18.11.3",
-    "@types/parseurl": "^1.3.1",
-    "@types/send": "^0.17.1",
-    "@types/uuid": "^8.3.4",
-    "@types/workerpool": "^6.1.0",
+    "@types/parseurl": "1.3.1",
+    "@types/send": "0.17.1",
+    "@types/uuid": "8.3.4",
+    "@types/workerpool": "6.1.0",
     "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "dotenv-cli": "6.0.0",
     "express": "4.18.2",
     "express-graphql": "0.12.0",
-    "get-image-colors": "^4.0.1",
+    "get-image-colors": "4.0.1",
     "graphql": "16.6.0",
     "graphql-tools": "8.3.6",
-    "har-schema": "^2.0.0",
-    "npm-run-all": "^4.1.5",
-    "parseurl": "^1.3.3",
-    "pm2": "^5.2.2",
-    "send": "^0.18.0",
+    "har-schema": "2.0.0",
+    "parseurl": "1.3.3",
+    "send": "0.18.0",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "workerpool": "^6.3.0"
+    "workerpool": "6.3.0"
   },
   "devDependencies": {
     "prisma": "4.5.0"
