--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,35 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-hook/resize-observer": "^1.2.6",
-    "chokidar": "^3.5.3",
-    "clsx": "^1.2.1",
-    "dayjs": "^1.11.5",
+    "@react-hook/resize-observer": "1.2.6",
+    "chokidar": "3.5.3",
+    "clsx": "1.2.1",
+    "dayjs": "1.11.5",
     "dotenv": "16.0.3",
-    "dotenv-webpack": "8.0.1",
-    "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg": "2.1.2",
     "graphql-request": "5.0.0",
     "graphql-tag": "2.12.6",
-    "http-server": "^14.1.1",
+    "http-server": "14.1.1",
     "next": "12.2.3",
-    "postcss-import": "^14.1.0",
-    "postcss-preset-env": "^7.8.0",
-    "punycode": "^2.1.1",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "7.8.0",
+    "punycode": "2.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.34.0",
-    "react-icons": "^4.4.0",
-    "react-scroll": "^1.8.7",
-    "recoil": "^0.7.5",
-    "serverless-mysql": "^1.5.4",
-    "uuid": "^8.3.2"
+    "react-hook-form": "7.34.0",
+    "react-icons": "4.4.0",
+    "react-scroll": "1.8.7",
+    "recoil": "0.7.5",
+    "serverless-mysql": "1.5.4",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "@types/react-scroll": "^1.8.4",
-    "sass": "^1.54.3",
+    "@types/react-scroll": "1.8.4",
+    "sass": "1.54.3",
     "typescript": "4.7.4"
   }
 }
