--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "build": "run-s build:api-schema build:backend build:frontend",
     "build:backend": "yarn workspace @pic-cube/backend build",
     "build:frontend": "yarn workspace @pic-cube/frontend build",
-    "build:api-schema": "yarn workspace @pic-cube/api-schema codegen",
-    "watch": "run-p watch:backend",
+    "build:api-schema": "yarn workspace @pic-cube/api-schema build",
+    "watch": "run-p watch:backend watch:api-schema",
     "watch:backend": "yarn workspace @pic-cube/backend watch",
+    "watch:api-schema": "yarn workspace @pic-cube/api-schema watch",
     "dev": "run-p watch start:dev",
     "dev-api": "run-p start:api-dev",
     "dev-scanners": "run-p watch:backend start:scanners-dev",
