--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   ],
   "scripts": {
     "start": "dotenv -e .env.production pm2 start ./pm2.prod.config.js",
-    "start:dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js --watch --no-daemon",
-    "start:api-dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js --watch --no-daemon --only api",
-    "start:scanners-dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js --watch --no-daemon --only scanners",
-    "start:frontend-dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js --watch --no-daemon --only frontend",
+    "start:dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js -- --watch --no-daemon",
+    "start:api-dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js -- --watch --no-daemon --only api",
+    "start:scanners-dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js -- --watch --no-daemon --only scanners",
+    "start:frontend-dev": "dotenv -e .env -e .env.development pm2 start ./pm2.dev.config.js -- --watch --no-daemon --only frontend",
     "stop": "pm2 kill",
     "build": "run-s build:api-schema build:backend build:frontend",
     "build:backend": "yarn workspace @pic-cube/backend build",
